RESOLVED FIXED77101
[EFL] Radio buttons and checkboxes - surfaces do not render properly
https://bugs.webkit.org/show_bug.cgi?id=77101
Summary [EFL] Radio buttons and checkboxes - surfaces do not render properly
Michal Ciepielski
Reported 2012-01-26 06:56:04 PST
I have found a bug in the current EFL Webkit port. I am linking to EFL 1.2.0 (checkout from svn r67333 19.01.2012). Radio buttons and checkboxes do not render properly. For radio buttons a whole group is checked at the same time and they cannot be unchecked. Checkboxes cannot be unchecked. I've found that the reason of this strange behaviour is that the surface is not cleared. You can fix this by clearing a buffer in RenderThemeEfl::paintThemePart (RenderThemeEfl.cpp) but obviously something has changed inside EFL framework since version 1.1.0 (checkout from svn r63607 26.09.2011) does not have this bug. Should I prepare a patch that clears the buffer?
Attachments
Screenshot of the bug (116.96 KB, image/png)
2012-01-27 01:16 PST, Michal Ciepielski
no flags
Sets alpha channel for new buffers (1.46 KB, patch)
2012-02-23 07:57 PST, Michal Ciepielski
no flags
Gyuyoung Kim
Comment 1 2012-01-26 16:59:36 PST
Could you submit screenshot for this problem ?
Michal Ciepielski
Comment 2 2012-01-27 01:16:22 PST
Created attachment 124272 [details] Screenshot of the bug
Michal Ciepielski
Comment 3 2012-01-27 01:17:14 PST
OK, I am attaching a screenshot showing the bug
Gyuyoung Kim
Comment 4 2012-01-27 04:00:21 PST
If there are wrong rendering with latest EFL library, I think you're able to feel free to submit patches. :-)
Michal Ciepielski
Comment 5 2012-02-23 07:57:50 PST
Created attachment 128479 [details] Sets alpha channel for new buffers I'm attaching the patch that fixes the issue.
Gustavo Lima Chaves
Comment 6 2012-02-24 05:29:38 PST
(In reply to comment #5) > Created an attachment (id=128479) [details] > Sets alpha channel for new buffers > > I'm attaching the patch that fixes the issue. http://trac.enlightenment.org/e/changeset?reponame=&new=64069%40trunk You might be right, indeed. And that shows it's been broken for a loong time :)
Hajime Morrita
Comment 7 2012-03-15 21:28:37 PDT
Comment on attachment 128479 [details] Sets alpha channel for new buffers rubberstamping.
Ryuan Choi
Comment 8 2012-03-15 21:35:04 PDT
Comment on attachment 128479 [details] Sets alpha channel for new buffers I verified. Thanks.
WebKit Review Bot
Comment 9 2012-03-15 22:51:07 PDT
Comment on attachment 128479 [details] Sets alpha channel for new buffers Clearing flags on attachment: 128479 Committed r110946: <http://trac.webkit.org/changeset/110946>
WebKit Review Bot
Comment 10 2012-03-15 22:51:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.