[EFL] Sets alpha channel for new buffers. https://bugs.webkit.org/show_bug.cgi?id=77101

Patch by Michal Ciepielski <m.ciepielski@samsung.com> on 2012-03-15
Reviewed by Hajime Morita.

No new tests.

By default EFL creates buffers without alpha channel.
This causes improper rendering of HTML controls (i.e. radio buttons, checkboxes).
This commits sets alpha channel for all newly created buffers by EFL.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::cacheThemePartNew):

Canonical link: https://commits.webkit.org/98506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110946 268f45cc-cd09-0410-ab3c-d52691b4dbfc